--- a/package.json
+++ b/package.json
@@ -10,24 +10,24 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
-    "next": "13.4.12",
-    "postcss": "8.4.27",
+    "gray-matter": "^4.0.3",
+    "next": "^14.0.1",
+    "postcss": "^8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
-    "gray-matter": "^4.0.3",
     "rehype-stringify": "^9.0.3",
     "remark-gfm": "^3.0.1",
     "remark-parse": "^10.0.2",
     "remark-rehype": "^10.1.0",
+    "tailwindcss": "3.3.3",
     "unified": "^10.1.2"
   },
   "devDependencies": {
     "@types/node": "20.4.4",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
-    "typescript": "5.1.6",
     "eslint": "8.45.0",
-    "eslint-config-next": "13.4.12"
+    "eslint-config-next": "13.4.12",
+    "typescript": "5.1.6"
   }
 }
